fix: Dark mode

--- a/src/styles/themes/dark.less
+++ b/src/styles/themes/dark.less
@@ -4,13 +4,23 @@
 @layout-sider-background: @component-background;
 @layout-header-background: @component-background;
 @grey-1: #585858;
+@grey-2: #D9D9D9;
+@grey-3: #434343;
 
 .circle-btn {
     width: 64px !important;
 }
 
 .menu a {
-    color: @grey-1 !important;
+    color: @grey-2 !important;
+}
+
+.part {
+    border-bottom: 1px solid @grey-3 !important;
+}
+
+.sidebar {
+    border-left: 1px solid @grey-3 !important;
 }
 
 .menu a:hover {
